// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e generates different images 1`] = `
{
  "height": 10,
  "value": 0.45,
  "width": 10,
}
`;

exports[`e2e generates different sizes images 1`] = `
{
  "height": 15,
  "value": 0.551111111111,
  "width": 15,
}
`;

exports[`e2e generates images with big diff 1`] = `
{
  "height": 4469,
  "value": 0.846446632356,
  "width": 1000,
}
`;

exports[`e2e generates the same image 1`] = `
{
  "height": 10,
  "value": 0,
  "width": 10,
}
`;

exports[`e2e generates the same image where 1 has a transparent background 1`] = `
{
  "height": 10,
  "value": 0.5,
  "width": 10,
}
`;

exports[`e2e takes into account colors in comparison 1`] = `
{
  "height": 10,
  "value": 1,
  "width": 10,
}
`;

exports[`e2e works with large size image 1`] = `
{
  "height": 13358,
  "value": 0.210276904394,
  "width": 900,
}
`;
